force-app/main/default/objects/Community_Feed_Approval_Activity__c/Community_Feed_Approval_Activity__c.object-meta.xml
<CustomObject>
    <label>Community Feed Approval Activity</label>
    <nameField>
        <label>Community Feed Approval Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Feed Approval Activitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>