force-app/main/default/objects/Community_Feed_Approval_Activity__c/fields/Appovel_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Appovel_Date_c__c</fullName>
    <label>Action Date Time</label>
    <type>DateTime</type>
</CustomField>