force-app/main/default/objects/Community_Feed_Approval_Activity__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Feed_Approval_Activitys</relationshipName>
    <type>Lookup</type>
</CustomField>