force-app/main/default/objects/Community_Feed_Approval_Activity__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Feed_Approval_Activitys1</relationshipName>
    <type>Lookup</type>
</CustomField>