force-app/main/default/objects/Community_Feed_Approval_Activity__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Post Created Date</label>
    <type>DateTime</type>
</CustomField>